--- a/be/package.json
+++ b/be/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node src/app.js"
+    "dev": "nodemon --exec babel-node src/app.js",
+    "build": "npx babel src --out-dir dist"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +24,10 @@
     "multer": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
     "@babel/node": "^7.27.1",
-    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-env": "^7.28.5",
     "nodemon": "^3.1.10"
   }
 }
