--- a/fe/.env
+++ b/fe/.env
@@ -1,1 +1,2 @@
-VITE_API_URL = "http://localhost:5000/api"
+# VITE_API_URL = "http://171.229.254.200:8081/api"
+ VITE_API_URL = "http://localhost:5000/api"
