--- a/fe/package.json
+++ b/fe/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.6.6",
     "@tanstack/react-query": "^5.90.5",
     "antd": "^5.27.6",
     "axios": "^1.12.2",
