--- a/be/package.json
+++ b/be/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "mongoose-paginate-v2": "^1.9.1",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
